feat: add pizza.html to recipe list
[Description]
- add pizza.html to recipes directory
- add boilerplate and header to pizza.html
- modify index.html to provide link to pizza.html,
pizza recipe
- add things learned to readme

--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <p>Here is a list of recipes of the foods I enjoy the most:</p>
+        <ul>
+            <li><a href="./recipes/pizza.html">Pizza</a> - because who doesn't love a good pizza?</li>
+        </ul>
     </body>
 </html>
