feat: add image and descriptions to pizza.html
[Description]
- add more content to pizza.html
- add image, description, ingredients, and steps

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -7,5 +7,33 @@
 
     <body>
         <h1>Pizza</h1>
+        <img src="./margheritap.jpg" alt="margherita pizza" height="500" width="650">
+        
+        <h2>Description</h2>
+        <p>A classic margherita pie, just like Nonna used to make. A light and fluffy crust, sweet tomatoes and bubbly mozzarella,
+            garnished with fragrant basil. Tasty and timeless.
+        </p>
+        <br>
+
+        <h3>Ingredients</h3>
+        <ul>
+            <li>9 ounces of Classic Pizza Dough</li>
+            <li>Flour</li>
+            <li>3 ounces of crushed tomatoes</li>
+            <li>3.5 ounces of fresh mozzarella</li>
+            <li>1 teaspoon extra-virgin olive oil</li>
+            <li>About a handful of basil</li>
+        </ul>
+        <br>
+
+        <h3>Steps</h3>
+        <ol>
+            <li>Heat oven up to 930 degrees Fahrenheit</li>
+            <li>Use flour to dust the work surface and the pizza peel</li>
+            <li>Stretch the pizza dough ball out to 12 or 16 inches and lay it out on the pizza peel</li>
+            <li>Top with sauce, followed by the mozzarella and olive oil (leave room for the crust)</li>
+            <li>slide the pizza off the pizza peel and into your oven and cook for one to two minutes (rotate pizza every 20 seconds)</li>
+            <li>Once cooked, remove the pizza from the oven and top with whole, fresh basil leaves</li>
+        </ol>
     </body>
 </html>
