--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <p>Here is a list of recipes of the foods I enjoy the most:</p>
         <ul>
             <li><a href="./recipes/pizza.html">Pizza</a> - because who doesn't love a good pizza?</li>
+            <li><a href="./recipes/burger.html">Cheeseburger</a> - an all-time classic.</li>
+            <li></li>
         </ul>
     </body>
 </html>
