--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Pizza</h1>
-        <img src="./margheritap.jpg" alt="margherita pizza" height="500" width="650">
+        <img src="../img/margheritap.jpg" alt="margherita pizza" height="500" width="650">
         
         <h2>Description</h2>
         <p>A classic margherita pie, just like Nonna used to make. A light and fluffy crust, sweet tomatoes and bubbly mozzarella,
