--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <ul>
             <li><a href="./recipes/pizza.html">Pizza</a> - because who doesn't love a good pizza?</li>
             <li><a href="./recipes/burger.html">Cheeseburger</a> - an all-time classic.</li>
-            <li></li>
+            <li><a href="./recipes/cocauvin.html">Coc au Vin</a></li>
         </ul>
     </body>
 </html>
